HV-1577 Update the README after the migration to Stax