@@ -79,7 +79,7 @@ There are more build options available as well. For more information refer to [C
 
 To build Hibernate Validator with JDK 9, export the following environment variable:
 
-    export MAVEN_OPTS="--add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-modules=java.xml.bind"
+    export MAVEN_OPTS="--add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED
 
 Then the build can be started like this:
 
@@ -89,7 +89,6 @@ Here are the reasons why we added the various build options:
 
  * add-opens java.security: required by wildfly-maven-plugin:execute-commands (for the WildFly integration tests and the TCK runner running in container mode)
  * add-opens java.lang: required by JRuby for Asciidoc processing
- * add-modules java.xml.bind: required by the forbiddenapis Maven plugin
 
 ## Continuous Integration
 
